--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
 }
 
 .boxSha {
-    text-shadow: 0px 0px 4px black;
+    text-shadow: 0px 3px 4px red;
 }
 
 .swiper-button-next, .swiper-button-prev {
