--- a/src/index.css
+++ b/src/index.css
@@ -102,15 +102,8 @@
     font-size: "lit";
 }
 
-/* 
-body {
-    background-color: black;
+@media screen and (min-width: 300px) {
+    .text11 {
+        font-size: 1.5rem;
+    }
 }
-
-p {
-    color: white;
-}
-
-li::marker {
-    color: white;
-} */
